fix(homeIconOnFiles): adjust home icon down only on sidebar-collapse

--- a/components/tailored/files/filepath/Filepath.less
+++ b/components/tailored/files/filepath/Filepath.less
@@ -1,7 +1,6 @@
 .breadcrumb {
   font-family: @primary-font;
   font-size: @text-size;
-  padding-top: @xlarge-spacing + @light-spacing;
   a {
     text-transform: capitalize;
     color: @primary-color;
@@ -23,4 +22,8 @@
     min-width: 100%;
     padding-top: @light-spacing;
   }
+}
+
+.blue-bg {
+  background-color: green;
 }
