--- a/layouts/Layout.less
+++ b/layouts/Layout.less
@@ -123,6 +123,9 @@
     #statusbar {
       padding-left: 3rem;
     }
+    .breadcrumb {
+      padding-top: @xlarge-spacing + @light-spacing;
+    }
   }
 
   &.is-collapsed-aside {
